@@ -2071,7 +2071,7 @@ error_if_not_usage_display_or_nonnumeric_lit (cb_tree x)
 %token REVERSED
 %token REWIND
 %token REXX_FUNC		"FUNCTION REXX"
-%token REXX_SAFE_FUNC		"FUNCTION REXX-SAFE"
+%token REXX_RESTRICTED_FUNC	"FUNCTION REXX-RESTRICTED"
 %token REWRITE
 %token RF
 %token RH
@@ -12600,7 +12600,7 @@ func_multi_parm:
   CONCATENATE_FUNC
 | FORMATTED_DATE_FUNC
 | REXX_FUNC
-| REXX_SAFE_FUNC
+| REXX_RESTRICTED_FUNC
 | SUBSTITUTE_FUNC
 | SUBSTITUTE_CASE_FUNC
 ;
