@@ -402,7 +402,7 @@ enum cb_intr_enum {
 	CB_INTR_REVERSE,
 #ifdef WITH_REXX
 	CB_EMBED_REXX,
-	CB_EMBED_REXX_SAFE,
+	CB_EMBED_REXX_RESTRICTED,
 #endif
 	CB_INTR_SECONDS_FROM_FORMATTED_TIME,
 	CB_INTR_SECONDS_PAST_MIDNIGHT,
