@@ -1917,7 +1917,7 @@ COB_EXPIMP cob_field *cob_intr_integer_of_formatted_date	(cob_field *,
 /* Optional embedded extensions */
 COB_EXPIMP cob_field *cob_embed_rexx			(const int, const int,
 							 const int, ...);
-COB_EXPIMP cob_field *cob_embed_rexx_safe		(const int, const int,
+COB_EXPIMP cob_field *cob_embed_rexx_restricted		(const int, const int,
 							 const int, ...);
 
 /*******************************/
